--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: powerandlife
+  username: <%= ENV["BLOG_APP_DATABASE_USERNAME"]%>
+  password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"]%>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
